# uciekacz

./: .gitignore  Cargo.toml  README.md
maps/: 1.txt  2.txt  3.txt  spiral.txt
src/: auto.rs  board.rs  game.rs  main.rs  manual.rs  utils.rs
winners/: v01.txt
