[package]
name = "uciekacz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
crossterm = "0.27.0"
ctrlc = "3.4.1"
lazy_static = "1.4.0"
multimap = "0.9.0"
petgraph = "0.6.4"
rayon = "1.8.0"
